--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tocharianou/cloudtrail-mcp",
   "description": "AWS CloudTrail MCP Server – audit log lookup, CloudTrail Lake SQL analytics, and event data store management for security investigations",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "mcpName": "io.github.TocharianOU/cloudtrail-mcp",
   "license": "Apache-2.0",
   "author": "TocharianOU",
@@ -20,11 +20,28 @@
   },
   "homepage": "https://github.com/TocharianOU/cloudtrail-mcp#readme",
   "keywords": [
-    "cloudtrail", "aws", "mcp", "mcp-server", "model-context-protocol",
-    "security", "audit", "cloud-security", "soc", "dfir",
-    "cloudtrail-lake", "aws-security", "claude", "anthropic"
+    "cloudtrail",
+    "aws",
+    "mcp",
+    "mcp-server",
+    "model-context-protocol",
+    "security",
+    "audit",
+    "cloud-security",
+    "soc",
+    "dfir",
+    "cloudtrail-lake",
+    "aws-security",
+    "claude",
+    "anthropic"
   ],
-  "files": ["dist", "logos", "LICENSE", "README.md", "server.json"],
+  "files": [
+    "dist",
+    "logos",
+    "LICENSE",
+    "README.md",
+    "server.json"
+  ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/index.js",
     "prepare": "npm run build",
@@ -43,11 +60,15 @@
     "express": "^5.1.0",
     "zod": "^3.24.2"
   },
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@types/node": "22.13.15",
     "shx": "0.4.0",
     "typescript": "^5.8.3"
   },
-  "publishConfig": { "access": "public" }
+  "publishConfig": {
+    "access": "public"
+  }
 }
